--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11.12"
-dependencies = []
+dependencies = [
+    "PyQt6>=6.5.0",
+    "PyQt6-Fluent-Widgets>=1.4.0"
+]
