--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11.12"
 dependencies = [
     "PyQt6>=6.5.0",
-    "PyQt6-Fluent-Widgets>=1.4.0"
+    "PyQt6-Fluent-Widgets>=1.4.0",
+    "openai-whisper>=20231117",
+    "torch>=2.0.0",
+    "torchaudio>=2.0.0"
 ]
