--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,15 @@ dependencies = [
     "PyQt6>=6.5.0",
     "PyQt6-Fluent-Widgets>=1.4.0",
     "openai-whisper>=20231117",
-    "torch>=2.0.0",
-    "torchaudio>=2.0.0"
+    "torch>=2.6.0",
+    "torchaudio>=2.6.0"
 ]
+
+[[tool.uv.index]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch" }
+torchaudio = { index = "pytorch" }
