--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11.12"
 dependencies = [
     "PyQt6>=6.5.0",
     "PyQt6-Fluent-Widgets>=1.4.0",
-    "openai-whisper>=20231117",
+    "faster-whisper>=1.0.0",
     "torch>=2.6.0",
     "torchaudio>=2.6.0"
 ]
