feat(dev): 添加热更新功能支持开发环境
- 新增 hupper 依赖实现代码热重载
- 添加开发启动脚本 run_dev.py 和 run_dev.bat
- 在核心配置中添加热更新相关常量
- 重构主程序入口以支持热更新模式
- 添加 HOT_RELOAD.md 文档说明使用方法和配置

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "PyQt6-Fluent-Widgets>=1.4.0",
     "faster-whisper>=1.0.0",
     "torch>=2.6.0",
-    "torchaudio>=2.6.0"
+    "torchaudio>=2.6.0",
+    "hupper>=1.12.1"
 ]
 
 [[tool.uv.index]]
