feat(core): 添加文案修复功能和API连通性检查
新增TextRefineWorker和ConnectivityChecker类实现文案修复和API连通性检查功能
添加相关配置常量和README文档说明
更新pyproject.toml添加requests依赖
在音频提取页面集成文案修复功能

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "faster-whisper>=1.0.0",
     "torch>=2.6.0",
     "torchaudio>=2.6.0",
-    "hupper>=1.12.1"
+    "hupper>=1.12.1",
+    "requests>=2.31.0"
 ]
 
 [[tool.uv.index]]
