--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ dependencies = [
     "requests>=2.31.0"
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pyinstaller>=6.0.0",
+    "pyinstaller-hooks-contrib>=2024.0"
+]
+
 [[tool.uv.index]]
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cu128"
