build: 添加PyInstaller配置文件并更新.gitignore
添加两个PyInstaller spec文件用于控制Expert Potato应用的打包过程：
1. Expert Potato.spec - 基础打包配置
2. expert_potato.spec - 高级配置，包含模型缓存排除和模块优化

同时更新.gitignore文件，保留项目的spec配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+# 但是保留项目的PyInstaller配置文件
+!Expert Potato.spec
+!expert_potato.spec
 
 # Installer logs
 pip-log.txt
