feat(tests): 添加完整的测试框架和文档
- 新增测试目录结构和基础测试类
- 添加单元测试、集成测试和端到端测试
- 实现测试辅助工具类（UI、文件、API）
- 添加详细的测试文档和快速入门指南
- 配置pytest测试环境和CI/CD集成
- 实现核心功能的工作流测试

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dev = [
     "pyinstaller>=6.0.0",
     "pyinstaller-hooks-contrib>=2024.0"
 ]
+test = [
+    "pytest>=7.0.0",
+    "pytest-qt>=4.2.0",
+    "pytest-mock>=3.10.0",
+    "pytest-cov>=4.0.0",
+    "pytest-xvfb>=3.0.0"
+]
 
 [[tool.uv.index]]
 name = "pytorch"
