--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ test = [
     "pytest-cov>=4.0.0",
     "pytest-xvfb>=3.0.0"
 ]
+video = [
+    "moviepy>=1.0.3"
+]
 
 [[tool.uv.index]]
 name = "pytorch"
