feat(音频提取): 新增在线音频提取功能
添加从YouTube和Bilibili视频链接提取音频的功能
- 新增ExtractAudioResourcePage页面组件
- 添加yt-dlp依赖用于视频下载和音频提取
- 实现多线程处理避免阻塞UI
- 添加进度反馈和错误处理机制
- 更新文档说明使用方法

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ test = [
     "pytest-xvfb>=3.0.0"
 ]
 video = [
-    "moviepy>=1.0.3"
+    "moviepy>=1.0.3",
+    "yt-dlp>=2023.12.30"
 ]
 
 [[tool.uv.index]]
