feat(音频克隆): 新增声音克隆功能及音频分析页面
- 添加声音克隆功能设计文档，概述项目目标和核心功能流程
- 实现音频项目管理系统，支持项目创建、导入和导出
- 新增音频分析页面，展示分析结果并支持多说话人识别
- 更新音频提取页面，增加导航到音频分析的功能
- 在音频提取工作线程中集成项目管理，支持项目元数据更新

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,22 @@ video = [
     "moviepy>=1.0.3",
     "yt-dlp>=2023.12.30"
 ]
+voice-cloning = [
+    # 说话人分离
+    "pyannote.audio>=3.0.0",
+    "speechbrain>=0.5.0",
+    
+    # 声音克隆
+    "TTS>=0.22.0",  # Coqui TTS
+    
+    # 音频处理
+    "librosa>=0.10.0",
+    "soundfile>=0.12.0",
+    "pydub>=0.25.0",
+    
+    # 翻译（可选）
+    "deep-translator>=1.11.0",
+]
 
 [[tool.uv.index]]
 name = "pytorch"
